// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Math > renders the provided mathML correctly 1`] = `
<body>
  <div>
    <span
      tabindex="0"
    >
      <mjx-container
        class="MathJax"
        jax="SVG"
        role="presentation"
        style="position: relative;"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="2.072ex"
          role="img"
          style="vertical-align: -0.186ex;"
          viewBox="0 -833.9 6826 915.9"
          width="15.443ex"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M52 289Q59 331 106 386T222 442Q257 442 286 424T329 379Q371 442 430 442Q467 442 494 420T522 361Q522 332 508 314T481 292T458 288Q439 288 427 299T415 328Q415 374 465 391Q454 404 425 404Q412 404 406 402Q368 386 350 336Q290 115 290 78Q290 50 306 38T341 26Q378 26 414 59T463 140Q466 150 469 151T485 153H489Q504 153 504 145Q504 144 502 134Q486 77 440 33T333 -11Q263 -11 227 52Q186 -10 133 -10H127Q78 -10 57 16T35 71Q35 103 54 123T99 143Q142 143 142 101Q142 81 130 66T107 46T94 41L91 40Q91 39 97 36T113 29T132 26Q168 26 194 71Q203 87 217 139T245 247T261 313Q266 340 266 352Q266 380 251 392T217 404Q177 404 142 372T93 290Q91 281 88 280T72 278H58Q52 284 52 289Z"
              id="MJX-1-TEX-I-1D465"
            />
            <path
              d="M109 429Q82 429 66 447T50 491Q50 562 103 614T235 666Q326 666 387 610T449 465Q449 422 429 383T381 315T301 241Q265 210 201 149L142 93L218 92Q375 92 385 97Q392 99 409 186V189H449V186Q448 183 436 95T421 3V0H50V19V31Q50 38 56 46T86 81Q115 113 136 137Q145 147 170 174T204 211T233 244T261 278T284 308T305 340T320 369T333 401T340 431T343 464Q343 527 309 573T212 619Q179 619 154 602T119 569T109 550Q109 549 114 549Q132 549 151 535T170 489Q170 464 154 447T109 429Z"
              id="MJX-1-TEX-N-32"
            />
            <path
              d="M56 237T56 250T70 270H369V420L370 570Q380 583 389 583Q402 583 409 568V270H707Q722 262 722 250T707 230H409V-68Q401 -82 391 -82H389H387Q375 -82 369 -68V230H70Q56 237 56 250Z"
              id="MJX-1-TEX-N-2B"
            />
            <path
              d="M462 0Q444 3 333 3Q217 3 199 0H190V46H221Q241 46 248 46T265 48T279 53T286 61Q287 63 287 115V165H28V211L179 442Q332 674 334 675Q336 677 355 677H373L379 671V211H471V165H379V114Q379 73 379 66T385 54Q393 47 442 46H471V0H462ZM293 211V545L74 212L183 211H293Z"
              id="MJX-1-TEX-N-34"
            />
            <path
              d=""
              id="MJX-1-TEX-N-2062"
            />
            <path
              d="M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z"
              id="MJX-1-TEX-N-3D"
            />
            <path
              d="M96 585Q152 666 249 666Q297 666 345 640T423 548Q460 465 460 320Q460 165 417 83Q397 41 362 16T301 -15T250 -22Q224 -22 198 -16T137 16T82 83Q39 165 39 320Q39 494 96 585ZM321 597Q291 629 250 629Q208 629 178 597Q153 571 145 525T137 333Q137 175 145 125T181 46Q209 16 250 16Q290 16 318 46Q347 76 354 130T362 333Q362 478 354 524T321 597Z"
              id="MJX-1-TEX-N-30"
            />
          </defs>
          <g
            fill="currentColor"
            stroke="currentColor"
            stroke-width="0"
            transform="matrix(1 0 0 -1 0 0)"
          >
            <g
              data-mml-node="math"
            >
              <g
                data-mml-node="mrow"
              >
                <g
                  data-mml-node="mrow"
                >
                  <g
                    data-mml-node="msup"
                  >
                    <g
                      data-mml-node="mi"
                    >
                      <use
                        xlink:href="#MJX-1-TEX-I-1D465"
                      />
                    </g>
                    <g
                      data-mml-node="mn"
                      transform="translate(572, 363) scale(0.707)"
                    >
                      <use
                        xlink:href="#MJX-1-TEX-N-32"
                      />
                    </g>
                  </g>
                  <g
                    data-mml-node="mo"
                    transform="translate(1197.8, 0)"
                  >
                    <use
                      xlink:href="#MJX-1-TEX-N-2B"
                    />
                  </g>
                  <g
                    data-mml-node="mrow"
                    transform="translate(2198, 0)"
                  >
                    <g
                      data-mml-node="mn"
                    >
                      <use
                        xlink:href="#MJX-1-TEX-N-34"
                      />
                    </g>
                    <g
                      data-mml-node="mo"
                      transform="translate(500, 0)"
                    >
                      <use
                        xlink:href="#MJX-1-TEX-N-2062"
                      />
                    </g>
                    <g
                      data-mml-node="mi"
                      transform="translate(500, 0)"
                    >
                      <use
                        xlink:href="#MJX-1-TEX-I-1D465"
                      />
                    </g>
                  </g>
                  <g
                    data-mml-node="mo"
                    transform="translate(3492.2, 0)"
                  >
                    <use
                      xlink:href="#MJX-1-TEX-N-2B"
                    />
                  </g>
                  <g
                    data-mml-node="mn"
                    transform="translate(4492.4, 0)"
                  >
                    <use
                      xlink:href="#MJX-1-TEX-N-34"
                    />
                  </g>
                </g>
                <g
                  data-mml-node="mo"
                  transform="translate(5270.2, 0)"
                >
                  <use
                    xlink:href="#MJX-1-TEX-N-3D"
                  />
                </g>
                <g
                  data-mml-node="mn"
                  transform="translate(6326, 0)"
                >
                  <use
                    xlink:href="#MJX-1-TEX-N-30"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <mjx-assistive-mml
          display="block"
          role="presentation"
          unselectable="on"
        >
          <math
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <mrow>
              <mrow>
                <msup>
                  <mi>
                    x
                  </mi>
                  <mn>
                    2
                  </mn>
                </msup>
                <mo>
                  +
                </mo>
                <mrow>
                  <mn>
                    4
                  </mn>
                  <mo>
                    ⁢
                  </mo>
                  <mi>
                    x
                  </mi>
                </mrow>
                <mo>
                  +
                </mo>
                <mn>
                  4
                </mn>
              </mrow>
              <mo>
                =
              </mo>
              <mn>
                0
              </mn>
            </mrow>
          </math>
        </mjx-assistive-mml>
      </mjx-container>
    </span>
    
  </div>
</body>
`;

exports[`Math > updates mathML on attributes change 1`] = `
<body>
  <div>
    <span
      tabindex="0"
    >
      <mjx-container
        class="MathJax"
        jax="SVG"
        role="presentation"
        style="position: relative;"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="2.072ex"
          role="img"
          style="vertical-align: -0.186ex;"
          viewBox="0 -833.9 2809.1 915.9"
          width="6.355ex"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M52 289Q59 331 106 386T222 442Q257 442 286 424T329 379Q371 442 430 442Q467 442 494 420T522 361Q522 332 508 314T481 292T458 288Q439 288 427 299T415 328Q415 374 465 391Q454 404 425 404Q412 404 406 402Q368 386 350 336Q290 115 290 78Q290 50 306 38T341 26Q378 26 414 59T463 140Q466 150 469 151T485 153H489Q504 153 504 145Q504 144 502 134Q486 77 440 33T333 -11Q263 -11 227 52Q186 -10 133 -10H127Q78 -10 57 16T35 71Q35 103 54 123T99 143Q142 143 142 101Q142 81 130 66T107 46T94 41L91 40Q91 39 97 36T113 29T132 26Q168 26 194 71Q203 87 217 139T245 247T261 313Q266 340 266 352Q266 380 251 392T217 404Q177 404 142 372T93 290Q91 281 88 280T72 278H58Q52 284 52 289Z"
              id="MJX-2-TEX-I-1D465"
            />
            <path
              d="M109 429Q82 429 66 447T50 491Q50 562 103 614T235 666Q326 666 387 610T449 465Q449 422 429 383T381 315T301 241Q265 210 201 149L142 93L218 92Q375 92 385 97Q392 99 409 186V189H449V186Q448 183 436 95T421 3V0H50V19V31Q50 38 56 46T86 81Q115 113 136 137Q145 147 170 174T204 211T233 244T261 278T284 308T305 340T320 369T333 401T340 431T343 464Q343 527 309 573T212 619Q179 619 154 602T119 569T109 550Q109 549 114 549Q132 549 151 535T170 489Q170 464 154 447T109 429Z"
              id="MJX-2-TEX-N-32"
            />
            <path
              d="M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z"
              id="MJX-2-TEX-N-3D"
            />
            <path
              d="M96 585Q152 666 249 666Q297 666 345 640T423 548Q460 465 460 320Q460 165 417 83Q397 41 362 16T301 -15T250 -22Q224 -22 198 -16T137 16T82 83Q39 165 39 320Q39 494 96 585ZM321 597Q291 629 250 629Q208 629 178 597Q153 571 145 525T137 333Q137 175 145 125T181 46Q209 16 250 16Q290 16 318 46Q347 76 354 130T362 333Q362 478 354 524T321 597Z"
              id="MJX-2-TEX-N-30"
            />
          </defs>
          <g
            fill="currentColor"
            stroke="currentColor"
            stroke-width="0"
            transform="matrix(1 0 0 -1 0 0)"
          >
            <g
              data-mml-node="math"
            >
              <g
                data-mml-node="mrow"
              >
                <g
                  data-mml-node="mrow"
                >
                  <g
                    data-mml-node="msup"
                  >
                    <g
                      data-mml-node="mi"
                    >
                      <use
                        xlink:href="#MJX-2-TEX-I-1D465"
                      />
                    </g>
                    <g
                      data-mml-node="mn"
                      transform="translate(572, 363) scale(0.707)"
                    >
                      <use
                        xlink:href="#MJX-2-TEX-N-32"
                      />
                    </g>
                  </g>
                </g>
                <g
                  data-mml-node="mo"
                  transform="translate(1253.3, 0)"
                >
                  <use
                    xlink:href="#MJX-2-TEX-N-3D"
                  />
                </g>
                <g
                  data-mml-node="mn"
                  transform="translate(2309.1, 0)"
                >
                  <use
                    xlink:href="#MJX-2-TEX-N-30"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <mjx-assistive-mml
          display="block"
          role="presentation"
          unselectable="on"
        >
          <math
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <mrow>
              <mrow>
                <msup>
                  <mi>
                    x
                  </mi>
                  <mn>
                    2
                  </mn>
                </msup>
              </mrow>
              <mo>
                =
              </mo>
              <mn>
                0
              </mn>
            </mrow>
          </math>
        </mjx-assistive-mml>
      </mjx-container>
    </span>
    
  </div>
</body>
`;

exports[`Math > updates mathML on attributes change 2`] = `
<body>
  <div>
    <span
      tabindex="0"
    >
      <mjx-container
        class="MathJax"
        jax="SVG"
        role="presentation"
        style="position: relative;"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="1.538ex"
          role="img"
          style="vertical-align: -0.025ex;"
          viewBox="0 -669 3428.3 680"
          width="7.756ex"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M370 305T349 305T313 320T297 358Q297 381 312 396Q317 401 317 402T307 404Q281 408 258 408Q209 408 178 376Q131 329 131 219Q131 137 162 90Q203 29 272 29Q313 29 338 55T374 117Q376 125 379 127T395 129H409Q415 123 415 120Q415 116 411 104T395 71T366 33T318 2T249 -11Q163 -11 99 53T34 214Q34 318 99 383T250 448T370 421T404 357Q404 334 387 320Z"
              id="MJX-3-TEX-N-63"
            />
            <path
              d="M28 214Q28 309 93 378T250 448Q340 448 405 380T471 215Q471 120 407 55T250 -10Q153 -10 91 57T28 214ZM250 30Q372 30 372 193V225V250Q372 272 371 288T364 326T348 362T317 390T268 410Q263 411 252 411Q222 411 195 399Q152 377 139 338T126 246V226Q126 130 145 91Q177 30 250 30Z"
              id="MJX-3-TEX-N-6F"
            />
            <path
              d="M295 316Q295 356 268 385T190 414Q154 414 128 401Q98 382 98 349Q97 344 98 336T114 312T157 287Q175 282 201 278T245 269T277 256Q294 248 310 236T342 195T359 133Q359 71 321 31T198 -10H190Q138 -10 94 26L86 19L77 10Q71 4 65 -1L54 -11H46H42Q39 -11 33 -5V74V132Q33 153 35 157T45 162H54Q66 162 70 158T75 146T82 119T101 77Q136 26 198 26Q295 26 295 104Q295 133 277 151Q257 175 194 187T111 210Q75 227 54 256T33 318Q33 357 50 384T93 424T143 442T187 447H198Q238 447 268 432L283 424L292 431Q302 440 314 448H322H326Q329 448 335 442V310L329 304H301Q295 310 295 316Z"
              id="MJX-3-TEX-N-73"
            />
            <path
              d=""
              id="MJX-3-TEX-N-2061"
            />
            <path
              d="M69 609Q69 637 87 653T131 669Q154 667 171 652T188 609Q188 579 171 564T129 549Q104 549 87 564T69 609ZM247 0Q232 3 143 3Q132 3 106 3T56 1L34 0H26V46H42Q70 46 91 49Q100 53 102 60T104 102V205V293Q104 345 102 359T88 378Q74 385 41 385H30V408Q30 431 32 431L42 432Q52 433 70 434T106 436Q123 437 142 438T171 441T182 442H185V62Q190 52 197 50T232 46H255V0H247Z"
              id="MJX-3-TEX-N-69"
            />
            <path
              d="M41 46H55Q94 46 102 60V68Q102 77 102 91T102 122T103 161T103 203Q103 234 103 269T102 328V351Q99 370 88 376T43 385H25V408Q25 431 27 431L37 432Q47 433 65 434T102 436Q119 437 138 438T167 441T178 442H181V402Q181 364 182 364T187 369T199 384T218 402T247 421T285 437Q305 442 336 442Q450 438 463 329Q464 322 464 190V104Q464 66 466 59T477 49Q498 46 526 46H542V0H534L510 1Q487 2 460 2T422 3Q319 3 310 0H302V46H318Q379 46 379 62Q380 64 380 200Q379 335 378 343Q372 371 358 385T334 402T308 404Q263 404 229 370Q202 343 195 315T187 232V168V108Q187 78 188 68T191 55T200 49Q221 46 249 46H265V0H257L234 1Q210 2 183 2T145 3Q42 3 33 0H25V46H41Z"
              id="MJX-3-TEX-N-6E"
            />
            <path
              d="M33 157Q33 258 109 349T280 441Q331 441 370 392Q386 422 416 422Q429 422 439 414T449 394Q449 381 412 234T374 68Q374 43 381 35T402 26Q411 27 422 35Q443 55 463 131Q469 151 473 152Q475 153 483 153H487Q506 153 506 144Q506 138 501 117T481 63T449 13Q436 0 417 -8Q409 -10 393 -10Q359 -10 336 5T306 36L300 51Q299 52 296 50Q294 48 292 46Q233 -10 172 -10Q117 -10 75 30T33 157ZM351 328Q351 334 346 350T323 385T277 405Q242 405 210 374T160 293Q131 214 119 129Q119 126 119 118T118 106Q118 61 136 44T179 26Q217 26 254 59T298 110Q300 114 325 217T351 328Z"
              id="MJX-3-TEX-I-1D44E"
            />
          </defs>
          <g
            fill="currentColor"
            stroke="currentColor"
            stroke-width="0"
            transform="matrix(1 0 0 -1 0 0)"
          >
            <g
              data-mml-node="math"
            >
              <g
                data-mml-node="mrow"
              >
                <g
                  data-mml-node="mi"
                >
                  <use
                    xlink:href="#MJX-3-TEX-N-63"
                  />
                  <use
                    transform="translate(444, 0)"
                    xlink:href="#MJX-3-TEX-N-6F"
                  />
                  <use
                    transform="translate(944, 0)"
                    xlink:href="#MJX-3-TEX-N-73"
                  />
                </g>
                <g
                  data-mml-node="mo"
                  transform="translate(1338, 0)"
                >
                  <use
                    xlink:href="#MJX-3-TEX-N-2061"
                  />
                </g>
                <g
                  data-mml-node="mi"
                  transform="translate(1504.7, 0)"
                >
                  <use
                    xlink:href="#MJX-3-TEX-N-73"
                  />
                  <use
                    transform="translate(394, 0)"
                    xlink:href="#MJX-3-TEX-N-69"
                  />
                  <use
                    transform="translate(672, 0)"
                    xlink:href="#MJX-3-TEX-N-6E"
                  />
                </g>
                <g
                  data-mml-node="mo"
                  transform="translate(2732.7, 0)"
                >
                  <use
                    xlink:href="#MJX-3-TEX-N-2061"
                  />
                </g>
                <g
                  data-mml-node="mi"
                  transform="translate(2899.3, 0)"
                >
                  <use
                    xlink:href="#MJX-3-TEX-I-1D44E"
                  />
                </g>
              </g>
            </g>
          </g>
        </svg>
        <mjx-assistive-mml
          display="block"
          role="presentation"
          unselectable="on"
        >
          <math
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <mrow>
              <mi>
                cos
              </mi>
              <mo>
                ⁡
              </mo>
              <mi>
                sin
              </mi>
              <mo>
                ⁡
              </mo>
              <mi>
                a
              </mi>
            </mrow>
          </math>
        </mjx-assistive-mml>
      </mjx-container>
    </span>
    
  </div>
</body>
`;
